--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,13 +14,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
     <%= f.label :street_address %><br />
-    <%= f.text_field :last_name %>
+    <%= f.text_field :street_address %>
   </div>
 
   <div class="field">
