--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
           </form>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
-              <li><%= link_to "Profile", edit_user_registration_path(current_user) %></li>
+              <li><%= link_to "Profile", user_path(current_user) %></li>
               <li><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></li>
               <% else %>
               <li><%= link_to "Sign In", new_user_session_path %></li>
