--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,9 +1,13 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {  multipart: true }) do |f| %>
   <%= devise_error_messages! %>
 
   <!-- the following fields are not part of the sign_up form -->
+
+  <div class="field">
+    <%= f.file_field :avatar %>
+  </div>
 
   <div class="field">
     <%= f.label :about %><br />
