disable search in controller for now, needs to be debugged. Also update the application layout and menu bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,20 @@
 @import "bootstrap";
 
 body { padding-top: 70px; }
+
+th {
+  a:hover {
+    text-decoration: none;
+  }
+  .asc:after {
+    margin-left: 3px;
+    content:"\e113";
+    font-family:"Glyphicons Halflings";
+  }
+
+  .desc:after {
+    margin-left: 3px;
+    content:"\e114";
+    font-family:"Glyphicons Halflings";
+  }
+}
