--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -57,8 +57,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :sex %><br />
-    <%= f.text_field :sex %>
+    <%= f.label :gender %><br />
+    <%= f.text_field :gender %>
   </div>
 
   <div class="field">
