--- a/app/views/pets/_pets.html.erb
+++ b/app/views/pets/_pets.html.erb
@@ -1,9 +1,11 @@
 <table class="table table-striped">
+  <th><%= sortable "user", "Owner" %></th>
   <th><%= sortable "species" %></th>
   <th><%= sortable "age" %></th>
   <th><%= sortable "pet_category_id", "Need Help With" %></th>
   <% @pets.each do |pet| %>
     <tr>
+      <td><%= pet.user.first_name.titleize %></td>
       <td><%= pet.species.titleize %></td>
       <td><%= pet.age.titleize %></td>
       <td><%= pet.pet_category.name.titleize %></td>
