update integration spec for adding pets

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <h2 class="text-center">Pets</h1>
+  <%= link_to "Add New", new_pet_path %>
 </div>
 <div class="row">
   <div class="col-sm-offset-1 col-sm-10">
