--- a/app/views/pets/_pets.html.erb
+++ b/app/views/pets/_pets.html.erb
@@ -6,7 +6,11 @@
   <th><%= sortable "pet_category_id", "Need Help With" %></th>
   <% @pets.each do |pet| %>
     <tr>
-      <td><%= link_to pet.name.titleize, pet_path(pet) %></td>
+      <% if current_user == pet.user %>
+        <td><%= link_to pet.name.titleize, pet_path(pet) %></td>
+      <% else %>
+        <td><%= pet.name.titleize %></td>
+      <% end %>
       <td><%= pet.user.first_name.titleize %></td>
       <td><%= pet.species.titleize %></td>
       <td><%= pet.age.titleize %></td>
