--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,3 +1,5 @@
 <h2><%= @pet.name %></h2>
-<%= link_to 'Edit', edit_pet_path(@pet), class: "btn btn-warning" %>
-<%= link_to "Delete", pet_path(@pet), data: {confirm: "Are you sure you want to remove this pet", method: "delete"}, class: "btn btn-danger" %>
+<% if current_user == @pet.user %>
+  <%= link_to 'Edit', edit_pet_path(@pet), class: "btn btn-warning" %>
+  <%= link_to "Delete", pet_path(@pet), data: {confirm: "Are you sure you want to remove this pet", method: "delete"}, class: "btn btn-danger" %>
+<% end %>
