--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,21 +1,7 @@
 <div class="row">
   <h2 class="text-center">Pets</h1>
-  <%= link_to "Add New", new_pet_path %>
+  <%= link_to "Add New", new_pet_path, id: "new_pet_link", remote: true, class: "btn btn-success" %>
 </div>
-<div class="row">
-  <div class="col-sm-offset-1 col-sm-10">
-    <%= form_tag(pets_path, method: 'get', remote: true, id: "pets_search", class: "pull-right") do %>
-      <p>
-        <%= text_field_tag :search, params[:search] %>
-        <%= submit_tag('Search', :name => nil) %>
-      </p>
-      <%= hidden_field_tag :direction, params[:direction] %>
-      <%= hidden_field_tag :sort, params[:sort] %>
-    <% end %>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-offset-1 col-sm-10" id="pets-display">
-    <%= render 'pets' %>
-  </div>
+<div class="row" id="pets_index">
+  <%= render "index" %>
 </div>
