--- a/app/views/pets/create.js.erb
+++ b/app/views/pets/create.js.erb
@@ -1,3 +1,3 @@
 $("form").remove();
-$("new_pet_link").show();
-$("#pets_index").html('<%= j render "index" %>')
+$("#pets_index").html('<%= j render "index" %>');
+$("#new_pet_link").show();
