--- a/app/views/pets/_form.erb
+++ b/app/views/pets/_form.erb
@@ -1,7 +1,7 @@
 <%= render "layouts/errors", :object => @pet %>
 <div class="row clearfix">
   <div class="col-sm-12 form_for_foods">
-    <%= form_for @pet do |f| %>
+    <%= form_for @pet, remote: true do |f| %>
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name%>
@@ -27,7 +27,7 @@
         <% end %>
       </div>
       <div class="form-group">
-        <%= f.submit :class => "btn btn-default" %>
+        <%= f.submit :class => "btn btn-success" %>
       </div>
     <% end %>
   </div>
