--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,12 +59,14 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
-      <% if flash[:notice] %>
+      <div id="flash-messages">      
+        <% if flash[:notice] %>
         <p class="alert alert-success"><%= flash[:notice] %></p>
-      <% end %>
-      <% if flash[:alert] %>
+        <% end %>
+        <% if flash[:alert] %>
         <p class="alert alert-danger"><%= flash[:alert] %></p>
-      <% end %>
+        <% end %>
+      </div>
       <%= yield %>
     </div>
   </body>
