--- a/app/views/pets/create.js.erb
+++ b/app/views/pets/create.js.erb
@@ -1,5 +1,6 @@
 $("form").remove();
 $("#new_pet_link").show();
+$('#pets-table').append("<%= j render @pet %>");
 
 <% if @result %>
   $("#flash-messages").html("<p class='alert alert-success'> <%= flash[:notice] %></p>");
