--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -18,13 +18,8 @@
   </div>
   <div class="row">
     <div class="col-sm-offset-1 col-sm-10" id="pets-display">
-      <table class="table table-striped" id="pets-table">
-        <th><%= sortable "name" %></th>
-        <th><%= sortable "user", "Owner" %></th>
-        <th><%= sortable "species" %></th>
-        <th><%= sortable "age" %></th>
-        <th><%= sortable "pet_category_id", "Need Help With" %></th>
-        <%= render @pets %>
-      </table>
+
+        <%= render 'pets' %>
+
     </div>
 </div>
