--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,8 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
             <li><%= link_to "Pets", pets_path %></li>
-            <!-- <li class="dropdown">
+            <li><%= link_to "Village", users_path %></li>
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
@@ -45,7 +46,7 @@
               <input type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
-          </form> -->
+          </form>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
               <li><%= link_to "Profile", user_path(current_user) %></li>
@@ -59,7 +60,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
-      <div id="flash-messages">      
+      <div id="flash-messages">
         <% if flash[:notice] %>
         <p class="alert alert-success"><%= flash[:notice] %></p>
         <% end %>
