update db seed to only use addresses that have lon and lat coordinates in Portland update index code for map

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,52 +1,31 @@
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLgKNQvjmYhaUlQ4ftPVBEnuE91ntawAs" async defer></script>
-
 <script>
-  var map;
-  function initMap() {
-    map = new google.maps.Map(document.getElementById('multi-markers'), {
-      center: {lat: 45.5231, lng: -122.6765},
-      zoom: 4,
-      styles: [{"featureType":"water","stylers":[{"color":"#19a0d8"}]},{"featureType":"administrative","elementType":"labels.text.stroke","stylers":[{"color":"#ffffff"},{"weight":6}]},{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#e85113"}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#efe9e4"},{"lightness":-40}]},{"featureType":"road.arterial","elementType":"geometry.stroke","stylers":[{"color":"#efe9e4"},{"lightness":-20}]},{"featureType":"road","elementType":"labels.text.stroke","stylers":[{"lightness":100}]},{"featureType":"road","elementType":"labels.text.fill","stylers":[{"lightness":-100}]},{"featureType":"road.highway","elementType":"labels.icon"},{"featureType":"landscape","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"landscape","stylers":[{"lightness":20},{"color":"#efe9e4"}]},{"featureType":"landscape.man_made","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels.text.stroke","stylers":[{"lightness":100}]},{"featureType":"water","elementType":"labels.text.fill","stylers":[{"lightness":-100}]},{"featureType":"poi","elementType":"labels.text.fill","stylers":[{"hue":"#11ff00"}]},{"featureType":"poi","elementType":"labels.text.stroke","stylers":[{"lightness":100}]},{"featureType":"poi","elementType":"labels.icon","stylers":[{"hue":"#4cff00"},{"saturation":58}]},{"featureType":"poi","elementType":"geometry","stylers":[{"visibility":"on"},{"color":"#f0e4d3"}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#efe9e4"},{"lightness":-25}]},{"featureType":"road.arterial","elementType":"geometry.fill","stylers":[{"color":"#efe9e4"},{"lightness":-10}]},{"featureType":"poi","elementType":"labels","stylers":[{"visibility":"simplified"}]}]
-    });
-    <% if @users %>
-    <% @users.each do |user| %>
-    var contentString<%=user.id%> = '<div id="content">'+
-        '<div id="siteNotice">'+
-        '</div>'+
-        '<h1 id="firstHeading" class="firstHeading"><%=user.first_name%></h1>'+
-        '<div id="bodyContent"><p><b>Products Available:</b></p><ol>'+
-        '</ol><p>Email: <%=user.email.capitalize%></p> <p>Go to: <%=link_to user.first_name, user_path(user) %></p>'+
-        '</div>'+
-        '</div>';
-    var infowindow<%=user.id%> = new google.maps.InfoWindow({
-      content: contentString<%=user.id%>
-    });
-    var marker<%=user.id%> = new google.maps.Marker({
-      position: {lat: <%=user.latitude%>, lng: <%=user.longitude%>},
-      map: map,
-      title: 'Hello World!'
-    });
-    marker<%=user.id%>.addListener('click', function() {
-      infowindow<%=user.id%>.open(map, marker<%=user.id%>);
-    });
-    <% end %>
-    <%end%>
-  }
-</script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('village-map'), {
+          center: {lat: 45.528207, lng: -122.682794},
+          zoom: 11,
+        });
+        <% if @users %>
+        <% @users.each do |user| %>
+        var marker<%=user.id%> = new google.maps.Marker({
+          position: {lat: <%=user.latitude%>, lng: <%=user.longitude%>},
+          map: map,
+          title: 'Hello World!'
+        });
+        marker<%=user.id%>.addListener('click', function() {
+          infowindow<%=user.id%>.open(map, marker<%=user.id%>);
+        });
+        <% end %>
+        <%end%>
+      }
+    </script>
 
 <div style='width: 1200px;' class="row">
-  <div id="multi-markers" style='width: 1000px; height: 600px;' class="col-sm-10"></div>
+  <div id="village-map" style='width: 1000px; height: 600px;' class="col-sm-10"></div>
   <div class="col-sm-2">
-    <h5>Last User to Add a Product!</h5>
-    <hr>
-    <ol class="btn-group-vertical" id="users_list">
-        <% @users.each do |user| %>
-          <li>
-            <button class="btn btn-success"></button>
-            <ol id="<%=user.id.to_s%>_user_prod" class="user_products"><h5>Products:</h5></ol>
-            <h5 id="<%=user.id.to_s%>_user_no_prod" class="user_no_products">No Products for this User have been added yet</h5>
-          </li>
-        <% end %>
-    </ol>
+
   </div>
 </div>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLgKNQvjmYhaUlQ4ftPVBEnuE91ntawAs&callback=initMap"
+async defer></script>
