--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-body { padding-top: 70px; }
 
 th {
   a:hover {
@@ -35,7 +34,7 @@ th {
 }
 
 #map {
-  height: 100%;
-  margin: 0;
+  height: 600px;
+  margin-top: 100px;
   padding: 0;
 }
