--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,5 +29,5 @@
   </div>
 </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLgKNQvjmYhaUlQ4ftPVBEnuE91ntawAs&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLgKNQvjmYhaUlQ4ftPVBEnuE91ntawAs&v=3&callback=initMap"
 async defer></script>
