--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,50 @@
 <script>
       var map;
+      var markers = [];
       function initMap() {
         map = new google.maps.Map(document.getElementById('village-map'), {
           center: {lat: 45.528207, lng: -122.682794},
-          zoom: 10,
+          zoom: 11,
           styles:
           [{"elementType":"geometry","stylers":[{"color":"#f5f5f5"}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"elementType":"labels.text.fill","stylers":[{"color":"#616161"}]},{"elementType":"labels.text.stroke","stylers":[{"color":"#f5f5f5"}]},{"featureType":"administrative.land_parcel","elementType":"labels.text.fill","stylers":[{"color":"#bdbdbd"}]},{"featureType":"administrative.neighborhood","elementType":"geometry","stylers":[{"color":"#066cab"}]},{"featureType":"administrative.neighborhood","elementType":"geometry.fill","stylers":[{"color":"#fa0593"},{"weight":2.5}]},{"featureType":"administrative.neighborhood","elementType":"geometry.stroke","stylers":[{"color":"#b61678"},{"weight":2.5}]},{"featureType":"administrative.neighborhood","elementType":"labels.icon","stylers":[{"visibility":"simplified"}]},{"featureType":"administrative.neighborhood","elementType":"labels.text.fill","stylers":[{"color":"#fa0593"},{"weight":8}]},{"featureType":"landscape.man_made","elementType":"geometry.fill","stylers":[{"color":"#fefcfc"}]},{"featureType":"landscape.natural","elementType":"geometry.fill","stylers":[{"color":"#f3fbf3"}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#eeeeee"}]},{"featureType":"poi","elementType":"labels.text.fill","stylers":[{"color":"#757575"}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#e5e5e5"}]},{"featureType":"poi.park","elementType":"labels.text.fill","stylers":[{"color":"#9e9e9e"}]},{"featureType":"road","elementType":"geometry","stylers":[{"color":"#ffffff"}]},{"featureType":"road.arterial","elementType":"labels.text.fill","stylers":[{"color":"#757575"}]},{"featureType":"road.highway","elementType":"geometry","stylers":[{"color":"#dadada"}]},{"featureType":"road.highway","elementType":"labels.text.fill","stylers":[{"color":"#616161"}]},{"featureType":"road.local","elementType":"labels.text.fill","stylers":[{"color":"#9e9e9e"}]},{"featureType":"transit.line","elementType":"geometry","stylers":[{"color":"#e5e5e5"}]},{"featureType":"transit.station","elementType":"geometry","stylers":[{"color":"#eeeeee"}]},{"featureType":"water","elementType":"geometry","stylers":[{"color":"#c9c9c9"}]},{"featureType":"water","elementType":"geometry.fill","stylers":[{"color":"#e7f7f8"}]},{"featureType":"water","elementType":"labels.text.fill","stylers":[{"color":"#9e9e9e"}]}]
         });
+
+        var largeInfowindow = new google.maps.InfoWindow();
+        var bounds = new google.maps.LatLngBounds();
+
+
         <% if @users %>
-        <% @users.each do |user| %>
-        var marker<%=user.id%> = new google.maps.Marker({
-          position: {lat: <%=user.latitude%>, lng: <%=user.longitude%>},
-          map: map,
-          title: 'Hello World!'
-        });
-        marker<%=user.id%>.addListener('click', function() {
-          infowindow<%=user.id%>.open(map, marker<%=user.id%>);
-        });
-        <% end %>
+          <% @users.each do |user| %>
+            var marker = new google.maps.Marker({
+              position: {lat: <%=user.latitude%>, lng: <%=user.longitude%>},
+              map: map,
+              title: "<%=user.first_name%>",
+              id: <%=user.id%>
+            });
+            markers.push(marker);
+            marker.addListener('click', function() {
+              populateInfoWindow(this, largeInfowindow);
+            });
+            bounds.extend(marker.position);
+          <% end %>
         <%end%>
+        map.fitBounds(bounds);
+      }
+
+      // This function populates the infowindow when the marker is clicked. We'll only allow
+      // one infowindow which will open at the marker that is clicked, and populate based
+      // on that markers position.
+      function populateInfoWindow(marker, infowindow) {
+        // Check to make sure the infowindow is not already opened on this marker.
+        if (infowindow.marker != marker) {
+          infowindow.marker = marker;
+          infowindow.setContent('<div>' + marker.title + '</div>');
+          infowindow.open(map, marker);
+          // Make sure the marker property is cleared if the infowindow is closed.
+          infowindow.addListener('closeclick',function(){
+            infowindow.setMarker(null);
+          });
+        }
       }
     </script>
 
