--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,18 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.navbar-brand {
+    float: left;
+    padding: 0px 15px;
+    font-size: 18px;
+    line-height: 20px;
+    height: 50px;
+}
+
+.navbar-brand > img {
+    display: block;
+    max-height: 50px;
+}
 
 th {
   a:hover {
@@ -32,9 +44,44 @@ th {
     font-family:"Glyphicons Halflings";
   }
 }
+#village-map {
+    height: 100%;
+    position: absolute;
+    width: 60%!important;
+}
 
-#map {
-  height: 600px;
-  margin-top: 100px;
-  padding: 0;
+#sidebar {
+    background: #f5f5f5;
+    box-shadow: 0 0 40px rgba(0,0,0,.2);
+    position: absolute;
+    right: 0;
+    width: 40%;
+    height: 100%!important;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+}
+.sidebar-header {
+  background: #343434;
+  height: auto;
+  border-bottom: 1px solid grey;
+  padding: 15px;
+  .tav-logo {
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+  }
+  img {
+    width: 120px;
+    margin-bottom: 3px;
+  }
+}
+
+.sidebar-header-title {
+    color: #fff;
+    font-family: 'Roboto Slab',monospace;
+    font-size: 20px;
+    margin-bottom: 5px;
+    margin-top: 1px;
+    text-align: center;
 }
