add helper methods to make body class and title dynamic

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,12 @@ th {
     font-family:"Glyphicons Halflings";
   }
 }
+
+.users-index {
+  .container {
+    width: 100% !important;
+  }
+}
 #village-map {
     height: 100%;
     position: absolute;
