--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, "Village Map") %>
+<% content_for(:page_id, "village-map") %>
 <script>
       var map;
       var markers = [];
