update language in c2a

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@
       <%= image_tag("/connect-icon.png") %>
       <h3>CONNECT NEIGHBORS WITH OTHERS</h3>
       <p>
-        Can’t help, but know someone who can? Connect them (it’s great karma!)
+        Can’t help, but know someone who can? Connect them 
       </p>
     </div>
 
